Updated API return code.Contoller and view added

--- a/JewelryStoreWebApp/appsettings.json
+++ b/JewelryStoreWebApp/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "LoginApi": "https://localhost:44303/api/Authentication",
+  "FetchCustomerAPI": "https://localhost:44303/api/StoreAPI/"
 }
