Code updated- 3 Print options added -View updated

--- a/JewelryStoreWebApp/appsettings.json
+++ b/JewelryStoreWebApp/appsettings.json
@@ -8,5 +8,6 @@
   },
   "AllowedHosts": "*",
   "LoginApi": "https://localhost:44303/api/Authentication",
-  "FetchCustomerAPI": "https://localhost:44303/api/StoreAPI/"
+  "FetchCustomerAPI": "https://localhost:44303/api/StoreAPI/",
+  "OutputFilePath": "C:\\Temp\\"
 }
